DNA #708 Word wrap fix for IE8+ (long URLs)
Thought we had this squashed with Jenn's fix in b45bec43a but perhaps
IE8 slipped through the cracks previously. Luckily, this was a quick
fix thanks to the notes I left myself on 1447c0fa7 in the itemview
branch. That led me to review the css-tricks post once again:

http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container

--- a/app/assets/stylesheets/cornell/_item-record.css.scss
+++ b/app/assets/stylesheets/cornell/_item-record.css.scss
@@ -81,6 +81,8 @@ dl.dl-horizontal {
 }
 
 dd.blacklight-notes {
+	-ms-word-break: break-all;
+	word-break: break-all;
 	/* Non standard for webkit */
 	word-wrap: break-word;
 	word-break:break-word;
@@ -134,7 +136,7 @@ dd.blacklight-notes {
 	padding: 10px 10px 0 10px;
 	h3 { margin-top: 0; }
 	.online-link { font-size: .875em; }
-	.location { 
+	.location {
 		font-size: .875em;
 		background: $light-tan;
 		margin-top: 0;
@@ -210,7 +212,7 @@ dd.blacklight-notes {
 	color: $medium-gray;
 	h5 { margin: 0; }
 }
-.item-requests { 
+.item-requests {
 	border-top: 5px solid $light-tan;
 	padding-top: 10px;
 	text-align: right;
